[gd_scene load_steps=6 format=2]

[ext_resource path="res://bg5.jpg" type="Texture" id=1]
[ext_resource path="res://PNG/playerShip2_green.png" type="Texture" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://Spawner.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]

[node name="Game" type="Node2D"]

[node name="bg5" type="Sprite" parent="."]
position = Vector2( 303.501, 420.116 )
rotation = 1.5708
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 14.0
text = "Score: "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 51.7137
margin_top = 11.0011
margin_right = 81.7137
margin_bottom = 25.0011
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 300, 750 )
script = ExtResource( 3 )

[node name="Power" type="Label" parent="Player"]
margin_left = -34.4949
margin_top = -362.701
margin_right = 53.5051
margin_bottom = -331.701
text = "
Power Ready!
      Hit \"x\""
max_lines_visible = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
scale = Vector2( 3, 2 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Player"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="Player"]
process_mode = 0
wait_time = 0.5

[node name="Timer2" type="Timer" parent="Player"]
wait_time = 20.0

[node name="Spawner" type="Node2D" parent="."]
position = Vector2( 300, -100 )
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="Spawner"]
process_mode = 0
[connection signal="timeout" from="Player/Timer" to="Player" method="_on_Timer_timeout"]
[connection signal="timeout" from="Player/Timer2" to="Player" method="_on_Timer2_timeout"]
[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_Timer_timeout"]
